<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svAddCustomer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddCustomerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddCustomerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CustomerNumber"
                android:maxLength="8"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FirstName"

                android:maxLines="1"
                android:maxLength="25"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddMiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MiddleName"
                android:maxLines="1"
                android:maxLength="25"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LastName"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Add"
                android:maxLength="120"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddLandmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddLandmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Landmark"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PhNo"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddSecondaryNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddSecondaryNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SeNo"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAddDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_boarder"
                android:padding="5dp">

                <EditText
                    android:id="@+id/txtAddDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/Dob"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/ibAddDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:padding="5dp"
                android:src="@mipmap/ic_date"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/Type"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <RadioGroup
                android:id="@+id/rgAddGasType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbAddGasDomestic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/Domestic" />

                <RadioButton
                    android:id="@+id/rbAddGasCommercial"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Commercial" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/lblBookGasSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/select_Gas_Size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnAddGasSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAddDeliveryCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtAddDeliveryCharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DeliveryCharge"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="4"
                android:padding="10dp"
                android:singleLine="true"
                android:text="0" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAddSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_boarder"
            android:text="@string/Save" />
    </LinearLayout>
</ScrollView>