<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svQuickBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAdminBookCustomerNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_boarder"
                android:padding="5dp">

                <EditText
                    android:id="@+id/txtAdminBookCustomerNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CustomerNumber"
                    android:maxLength="8"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnBookDone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@mipmap/ic_done"
                android:layout_margin="2dp"/>
</LinearLayout>
            <CheckBox
                android:id="@+id/chbService"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/Service" />

            <LinearLayout
                android:id="@+id/llType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/Type"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


                <RadioGroup
                    android:id="@+id/rgAdminBookType"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbAdminBookDomestic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/Domestic" />

                    <RadioButton
                        android:id="@+id/rbAdminBookCommercial"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Commercial" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/lblBookGasSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/select_Gas_Size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spnAdminBookGasSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAdminBookQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_boarder"
                android:padding="5dp">

                <EditText
                    android:id="@+id/txtAdminBookQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Quantity"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/GasQuantity" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAdminBookDeliveryCharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_boarder"
                android:padding="5dp">

                <EditText
                    android:id="@+id/txtAdminBookDeliveryCharge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DeliveryCharge"
                    android:maxLines="1"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="0" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAdminBookServiceNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_boarder"
                android:padding="5dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/txtAdminBookServiceNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ServiceNote"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAdminBookServiceCharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_boarder"
                android:padding="5dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/txtAdminBookServiceCharge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ServiceCharge"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/lblBookTotal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/Total"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAdminBookTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spnAdminBookDeliveryBoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAdminBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/button_boarder"
                android:text="@string/Book"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.NestedScrollView>
