<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svExpense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnExpenseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_boarder" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputExpenseDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_boarder"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtExpenseDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ExpenseDetail"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputExpenseCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_boarder"
            android:layout_marginTop="5dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/txtExpenseCharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ExpenseCharge"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:maxLength="4"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnExpenseSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_boarder"
            android:text="@string/Submit" />
    </LinearLayout>
</ScrollView>